...
                                    </mask>
                                </variation>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Phone Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V3M-Gn-Fkj">
                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="username"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="8Zo-qt-oN5"/>
                                    <constraint firstAttribute="height" constant="40" id="EKE-AE-uJI"/>
                                    <constraint firstAttribute="width" constant="199" id="pxE-2k-oVh"/>
                                </constraints>
                                <nil key="textColor"/>
...
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="BLn-24-KsT"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hmC-fB-jg9">
                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="password"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="199" id="Ba5-XF-5aF"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="EJP-zn-XSg"/>
                                    <constraint firstAttribute="height" constant="40" id="nj1-BV-xIy"/>
                                </constraints>
                                <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SoI-G5-CQg">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="234" id="Itj-IA-D7J"/>
                                    <constraint firstAttribute="height" constant="40" id="nmR-HW-adX"/>
                                </constraints>
                                <state key="normal" title="Login" backgroundImage="log in">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="Itj-IA-D7J"/>
                                        <exclude reference="nmR-HW-adX"/>
...
